RESOLVED FIXED154600
Fix some issues in MallocBench
https://bugs.webkit.org/show_bug.cgi?id=154600
Summary Fix some issues in MallocBench
Geoffrey Garen
Reported 2016-02-23 11:56:45 PST
Fix some issues in MallocBench
Attachments
Patch (7.11 KB, patch)
2016-02-23 12:04 PST, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2016-02-23 12:04:13 PST
Geoffrey Garen
Comment 2 2016-02-26 09:58:50 PST
Note You need to log in before you can comment on or make changes to this bug.